--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" src="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
 <body>
   <h1>Portifolio</h1>
