--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
   <head>
+    <style>
+      h1{
+        color:blue;
+      }
+      </style>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 <body>
