--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         color:blue;
       }
       </style>
+    <script>
+      alert("teste")
+    </script>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 <body>
