--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       }
       </style>
     <script>
-      alert("teste")
+      alert("teste");
+      console.log("teste")
     </script>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
