--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
       }
       </style>
     <script>
-      alert("teste");
-      console.log("teste")
+     /* alert("teste");
+      console.log("teste")*/
+      texto = document.querySelector(h1)
+      function teste(){
+        texto.innerText = "javascript javascript funciona"
+      }
     </script>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 <body>
   <h1>Portifolio</h1>
+  <button onclick="teste()">
+    teste
+  </button>
 </body>
 </html>
