--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       console.log("teste")*/
       texto = document.querySelector(h1)
       function teste(){
-        texto.innerText = "javascript javascript funciona"
+        document.write("javascript")
+        //texto.innerText = "javascript javascript funciona"
       }
     </script>
     <link rel="stylesheet" href="css/style.css"/>
