--- a/index.html
+++ b/index.html
@@ -1,30 +1,46 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de Jennifer Cristine</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/script.js"></script> <!-- Vinculando o arquivo JS -->
-  </head>
-  <body>
-    
-    <header>
-      <img src="img/perfil.png" id="perfil" alt="foto de perfil"/>
-      <h1>Jennifer Cristine</h1>
-    </header>
-    <nav>
-      <!--todo: criar as paginas-->
-      <a href="#home" >Inicio</a>
-      <a href="#services" class="active">Projetos</a>
-      <a href="#about">Sobre</a>
-      <a href="#contact">Contato</a>
-    </nav>
-<!--todo: criar um titulo e um container para subtitulo-->
-    <div class="cards-container">
-   
-    </div>
-    <footer></footer>
 
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--titulo-->
+  <title>Portfólio de Jennifer Cristine</title>
+  <!--css-->
+  <link rel="stylesheet" href="css/extends.css">
+  <!--fontes-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
+  <!--script-->
+  <script defer src="js/script.js" defer></script> <!-- Vinculando o arquivo JS -->
+</head>
+
+<body>
+
+  <header>
+    <img src="img/perfil.png" id="perfil" alt="foto de perfil" />
+    <h1>Jennifer Cristine</h1>
+  </header>
+  <nav>
+    <!--todo: criar as paginas-->
+    <ul class="lista">
+      <li> <a href="#home">Inicio</a></li>
+      <li> <a href="#services" class="active">Projetos</a></li>
+      <li><a href="#about">Sobre</a></li>
+      <li> <a href="#contact">Contato</a></li>
+    </ul>
+  </nav>
+  <!--todo: criar um titulo e um container para subtitulo-->
+  <section></section>
+  <article></article>
+  <aside></aside>
+
+  <div class="cards-container">
+
+  </div>
+  <footer></footer>
+
+</body>
+
 </html>
